--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     echo Build docker image
     docker build -t compit.azurecr.io/compare-it-back:latest .
     echo Login to docker repository
-    az login
+    az acr login --name compit -u compit -p tXWXRnEk/VpId9aviPAwgM9wH8CButFQ
     echo Push docker image
     docker push compit.azurecr.io/compare-it-back:latest
   displayName: 'Build and Push Docker Image for CompareIT Back'
