--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,7 @@ steps:
     echo Build docker image
     docker build -t compit.azurecr.io/compare-it-back:latest .
     echo Login to docker repository
-    az acr login --name compit -u compit -p tXWXRnEk/VpId9aviPAwgM9wH8CButFQ
+    az acr login --name compit -u $(acrUsername) -p $(acrPassword)
     echo Push docker image
     docker push compit.azurecr.io/compare-it-back:latest
   displayName: 'Build and Push Docker Image for CompareIT Back'
-  env:
-    username: $(acrUsername)
-    password: $(acrPassword)
