--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.17</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
