--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
 spring.datasource.initialization-mode = always
+spring.datasource.data=classpath:init.sql
