pipeline() : test integration tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ variables:
 
 stages:
   - build
+  - get-integration-tests
+  - integration
   - package
   - deploy
 
@@ -19,6 +21,22 @@ maven-build:
   artifacts:
     paths:
       - target/*.jar
+
+get-integration depot:
+  image: carver/docker-git
+  stage: get-integration-tests
+  script:
+    - git clone https://compareIT:myyvlqtfrryo7wkopcv2w42lgx2wjfeylxq6ethdismwwmt77j6a@dev.azure.com/compareIT/COMPARE-IT/_git/CITTESTI
+    - cd CITESTI
+
+maven-integration-tests:
+  image: maven:3-jdk-8
+  stage: build
+  script: "mvn clean package"
+  artifacts:
+    paths:
+      - target/*.jar
+
 
 docker-build:
   stage: package
