pipeline() : correct the gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ get-integration depot:
 
 maven-integration-tests:
   image: maven:3-jdk-8
-  stage: build
+  stage: integration
   script: "mvn clean package"
   artifacts:
     paths:
