--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
 maven-build:
   image: maven:3-jdk-8
   stage: build
-  script: "mvn clean package -DskipTests"
+  script: "mvn clean package"
   artifacts:
     paths:
       - target/*.jar
