--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:sql/init.sql
+spring.datasource.data=classpath:sql/initll.sql
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
