--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-
+mysqlx.datasource.url=mysqlx://${DATABASE_HOST}:${DATABASE_XPORT}/${DATABASE_NAME}?user=${DATABASE_USERNAME}&password=${DATABASE_PASSWORD}
+mysqlx.datasource.schema=${DATABASE_NAME}
+mysqlx.datasource.settings={"pooling":{"enabled":true, "maxSize":8,"maxIdleTime":30000, "queueTimeout":10000} }
 jwt.secret=javainuse
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
