--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,10 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
-
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=/tmp
+spring.mvc.favicon.enabled=false
+logging.level.root=${LOG_LEVEL}
+logging.level.org.springframework.web=${LOG_LEVEL}
+logging.level.org.hibernate=${DATABASE_LOG_LEVEL}
