feat() : email with sendgrid

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <version>1.12.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
