FIX sender id hibernate mode in env settings fixing smartphones content

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jwt.secret=javainuse
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:sql/initll.sql
 # Keep the connection alive if idle for a long time (needed in production)
