--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:sql/initll.sql
+spring.datasource.data=classpath:sql/initpoke.sql
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
